# SLAE4SEM

./: CMakeLists.txt
src/: CMakeLists.txt
src/my_project/dense/: Densematrix.hpp
src/my_project/matrix/: FiveDiagonalMatrix.cpp  FiveDiagonalMatrix.hpp  LinearBoundaryValueProblemMatrix3.hpp  LinearBoundaryValueProblemMatrix5.hpp  NonLinearBoundaryValueProblemMatrix3.hpp  NonLinearBoundaryValueProblemMatrix5.hpp  ThreeDiagonalMatrix.cpp  ThreeDiagonalMatrix.hpp
src/my_project/solvers/: CG.hpp  Chebyshev.hpp  FiveDiagonalSolver.cpp  FiveDiagonalSolver.hpp  GMRES.h  GMRES.hpp  GaussSeidel.hpp  Jacobi.hpp  LinearBoundaryValueProblem2.hpp  LinearBoundaryValueProblem4.hpp  NonlinearBoundaryValueProblem2.hpp  NonlinearBoundaryValueProblem4.hpp  SimpleIteration.hpp  Steepest_gradient_descent.hpp  ThreeDiadonalSolver.cpp  ThreeDiadonalSolver.hpp  steepest_gradient_descent.hpp
src/my_project/sparse/: CSR.hpp
src/my_project/utility/: Norm.hpp  Overloads.hpp  Triplet.hpp
tests/: CMakeLists.txt  test_beam_bending.cpp  test_cg.cpp  test_code_optimize.cpp  test_csr_matrix.cpp  test_cubic_spline.cpp  test_dense_matrix.cpp  test_exception.cpp  test_five_diag_matrix.cpp  test_gmres.cpp  test_linear_boundary_value_problem_2.cpp  test_linear_boundary_value_problem_3.cpp  test_linear_boundary_value_problem_4.cpp  test_linear_boundary_value_problem_5.cpp  test_nonlinear_boundary_value_problem_2.cpp  test_nonlinear_boundary_value_problem_4.cpp  test_nonlinear_bvp3.cpp  test_nonlinear_bvp5.cpp  test_simple_iteration_method.cpp  test_solver.cpp
(+17 files in other folders)
